fix marketPane overlap on manuscript

--- a/src/main/resources/css/ManuscriptScene.css
+++ b/src/main/resources/css/ManuscriptScene.css
@@ -1,18 +1,21 @@
-.manuscriptCard {
-    /*-fx-image: url("../Images/cards/card1_back.png");*/
 
-    /*-fx-border-radius: 25px;*/
-}
-
-.gridpane{
-    -fx-background-color: #000000;
+/*.gridpane{
+    -fx-background-color: rgb(100, 100, 200);
     -fx-alignment: centre;
 }
 
-.rettangolo{
-
+.marketArea{
+    -fx-background-color: rgb(100, 230, 250);
 }
 
+.commonObjectives{
+    -fx-background-color: rgb(100, 50, 250);
+}
+
+.marketGolds{
+    -fx-background-color: rgb(255, 0, 250);
+}
+*/
 .text-name {
     -fx-font-size: 10.7px;
 }
